--- a/sandbox.parent/sandbox.client/package.json
+++ b/sandbox.parent/sandbox.client/package.json
@@ -1,10 +1,57 @@
 {
   "name": "sandbox",
+  "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
     "gulp": "gulp",
-    "postinstall": "gulp build"
+    "postinstall": "gulp build",
+    "tsc": "tsc",
+    "start": "gulp start"
   },
   "dependencies": {
-    "gulp": "github:gulpjs/gulp#4.0"
+    "@angular/animations": "^4.3.6",
+    "@angular/common": "^4.3.6",
+    "@angular/compiler": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/forms": "^4.3.6",
+    "@angular/http": "^4.3.6",
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/platform-browser-dynamic": "^4.3.6",
+    "@angular/router": "^4.3.6",
+    "@types/core-js": "^0.9.43",
+    "@types/jquery": "^3.2.12",
+    "@types/jquery.contextmenu": "^1.7.33",
+    "@types/node": "^8.0.28",
+    "assets-webpack-plugin": "^3.5.1",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "bootstrap": "^3.3.7",
+    "browser-sync": "^2.18.13",
+    "core-js": "^2.5.1",
+    "del": "^3.0.0",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-clean-css": "^3.9.0",
+    "gulp-debug": "^3.1.0",
+    "gulp-hash": "^4.1.1",
+    "gulp-less": "^3.3.2",
+    "gulp-pug": "^3.3.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace-assets": "0.0.4",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-typescript": "^3.2.2",
+    "gulp-util": "^3.0.8",
+    "gulplog": "^1.0.0",
+    "jquery": "^3.2.1",
+    "jquery-contextmenu": "^2.6.2",
+    "less-plugin-autoprefix": "^1.5.1",
+    "less-plugin-npm-import": "^2.1.0",
+    "node-notifier": "^5.1.2",
+    "rxjs": "^5.4.3",
+    "sass-module-importer": "^1.4.0",
+    "ts-loader": "^2.3.7",
+    "typescript": "^2.5.2",
+    "webpack": "^3.6.0",
+    "zone.js": "^0.8.17"
   }
 }
