--- a/sandbox.parent/sandbox.client/package.json
+++ b/sandbox.parent/sandbox.client/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "gulp": "gulp",
-    "postinstall": "gulp build",
+    "postinstall1": "gulp build",
     "tsc": "tsc",
     "start": "gulp start"
   },
