--- a/sandbox.parent/sandbox.client/package.json
+++ b/sandbox.parent/sandbox.client/package.json
@@ -22,6 +22,7 @@
     "@types/jquery": "^3.2.12",
     "@types/jquery.contextmenu": "^1.7.33",
     "@types/node": "^8.0.28",
+    "angular2-template-loader": "^0.6.2",
     "assets-webpack-plugin": "^3.5.1",
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -47,6 +48,7 @@
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-npm-import": "^2.1.0",
     "node-notifier": "^5.1.2",
+    "raw-loader": "^0.5.1",
     "rxjs": "^5.4.3",
     "sass-module-importer": "^1.4.0",
     "ts-loader": "^2.3.7",
