--- a/sandbox.parent/build.gradle
+++ b/sandbox.parent/build.gradle
@@ -36,11 +36,18 @@ subprojects {
 
   repositories {
     mavenLocal()
+    if (System.getenv('GG_REPO') != null && System.getenv('GG_REPO').length() > 0)
+      maven { url System.getenv('GG_REPO') }
     mavenCentral()
   }
 
   dependencies {
     ext.jacksonVersion = "2.7.3"
+    ext.depinjectVersion = '1.1.2'
+    ext.greetgoDbVersion = '0.0.19'
+    ext.greetgoMvcVersion = "1.0.2"
+    ext.jettyVersion = '9.4.0.v20161208'
+    ext.guavaVersion = '23.0'
 
     testCompile 'org.testng:testng:6.5.1'
     compile 'org.easytesting:fest-assert-core:2.0M10'
