Вынесен stand_db чтобы можно было засунуть стэндовые данные в БД

--- a/sandbox.parent/sandbox.stand/build.gradle
+++ b/sandbox.parent/sandbox.stand/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
   compile project(':sandbox.controller')
+  compile project(':sandbox.stand_db')
 
   compile "kz.greetgo.depinject:greetgo.depinject.gen:$depinjectVersion"
   compile "kz.greetgo.mvc:greetgo.mvc:$greetgoMvcVersion"
