Добавлена сборка war-ки, но пока ещё не протестирована

--- a/sandbox.parent/settings.gradle
+++ b/sandbox.parent/settings.gradle
@@ -3,3 +3,5 @@ include 'sandbox.controller'
 include 'sandbox.stand'
 include 'sandbox.stand_db'
 include 'sandbox.db'
+include 'sandbox.server'
+include 'sandbox.server:war'
