Настроена сборка и проверена

--- a/sandbox.parent/sandbox.server/war/build.gradle
+++ b/sandbox.parent/sandbox.server/war/build.gradle
@@ -38,6 +38,8 @@ war {
 //    println(project(':sandbox.client').buildDir.toPath().resolve('product').toFile())
   }
 
+  baseName 'sandbox'
+
   addExcludes rootSpec
 
   classpath beanContainerJar
