Перенесён проект sandbox.stand_db -> sandbox.stand:db

--- a/sandbox.parent/sandbox.db/build.gradle
+++ b/sandbox.parent/sandbox.db/build.gradle
@@ -11,6 +11,6 @@ dependencies {
   compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
 
   testCompile "kz.greetgo.depinject:greetgo.depinject.testng:$depinjectVersion"
-  testCompile project(':sandbox.stand_db').sourceSets.main.output
+  testCompile project(':sandbox.stand:db').sourceSets.main.output
 
 }
