--- a/sandbox.parent/settings.gradle
+++ b/sandbox.parent/settings.gradle
@@ -1,7 +1,7 @@
 include 'sandbox.client'
 include 'sandbox.controller'
 include 'sandbox.stand'
-include 'sandbox.stand_db'
+include 'sandbox.stand:db'
 include 'sandbox.db'
 include 'sandbox.server'
 include 'sandbox.server:war'
