--- a/sandbox.parent/sandbox.stand/build.gradle
+++ b/sandbox.parent/sandbox.stand/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
   compile project(':sandbox.controller')
-  compile project(':sandbox.stand:db')
+  compile project('db')
 
   compile "kz.greetgo.depinject:greetgo.depinject.gen:$depinjectVersion"
   compile "kz.greetgo.mvc:greetgo.mvc:$greetgoMvcVersion"
