Доработка конвертора из TypeScript в Java

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ subprojects {
     if (project.hasProperty("sourceCompatibility")) {
       cp.entries.findAll { it.path.contains('JRE_CONTAINER') }.each {
         it.path += "/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/" +
-            "JavaSE-$project.sourceCompatibility"
+          "JavaSE-$project.sourceCompatibility"
       }
     }
   }
@@ -58,8 +58,11 @@ subprojects {
 
   jar {
     manifest {
-      attributes 'Implementation-Title': project.name, 'Implementation-Version': version,
-          'Implementation-Vendor': vendorName, 'Built-By': System.getProperty("user.name"), 'Built-At': nowFormattedDate
+      attributes 'Implementation-Title': project.name
+      attributes 'Implementation-Version': version
+      attributes 'Implementation-Vendor': vendorName
+      attributes 'Created-By': System.getProperty("user.name")
+      attributes 'Created-At': nowFormattedDate
     }
   }
 
