--- a/sandbox.client/package.json
+++ b/sandbox.client/package.json
@@ -53,6 +53,7 @@
     "sass-module-importer": "^1.4.0",
     "ts-loader": "^2.3.7",
     "typescript": "^2.5.2",
+    "underscore": "^1.8.3",
     "webpack": "^3.6.0",
     "zone.js": "^0.8.17"
   }
