--- a/sandbox.db/build.gradle
+++ b/sandbox.db/build.gradle
@@ -8,6 +8,7 @@ dependencies {
 
   compile 'org.apache.pdfbox:pdfbox:1.8.9'
   compile 'com.itextpdf:itextpdf:5.5.7'
+  compile "com.google.guava:guava:23.0"
 
   compile group: 'org.postgresql', name: 'postgresql', version: '9.4-1202-jdbc42'
   compile group: 'org.mybatis', name: 'mybatis', version: '3.4.2'
