--- a/sandbox.db/build.gradle
+++ b/sandbox.db/build.gradle
@@ -10,6 +10,8 @@ dependencies {
   compile 'com.itextpdf:itextpdf:5.5.7'
   compile "com.google.guava:guava:23.0"
 
+  compile "com.jcraft:jsch:0.1.51"
+
   compile group: 'org.postgresql', name: 'postgresql', version: '9.4-1202-jdbc42'
   compile group: 'org.mybatis', name: 'mybatis', version: '3.4.2'
   compile group: 'org.liquibase', name: 'liquibase-core', version: '3.5.1'
