--- a/build.gradle
+++ b/build.gradle
@@ -66,18 +66,12 @@ subprojects {
     }
   }
 
-  sourceSets {
-    main {
-      java.srcDirs = ["src"]
-      resources.srcDirs = ["src", "src_resources"]
-      //output.resourcesDir = "build/classes/main"
-    }
-    test {
-      java.srcDirs = ["test_src"]
-      resources.srcDirs = ["test_src", "test_resources"]
-      //output.resourcesDir = "build/classes/test"
-    }
-  }
+  sourceSets.main.java.srcDirs = ["src"]
+  sourceSets.main.resources.srcDirs = ["src", "src_resources"]
+  //sourceSets.main.output.resourcesDir = "build/classes/main"
+  sourceSets.test.java.srcDirs = ["test_src"]
+  sourceSets.test.resources.srcDirs = ["test_src", "test_resources"]
+  //sourceSets.test.output.resourcesDir = "build/classes/test"
 
   //noinspection GroovyMissingReturnStatement
   test { useTestNG() }
