added client adding, updating, removing

--- a/sandbox.client/package.json
+++ b/sandbox.client/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^3.3.7",
     "browser-sync": "^2.18.13",
     "core-js": "^2.5.1",
+    "datatables.net-dt": "^1.10.16",
     "del": "^3.0.0",
     "gulp": "github:gulpjs/gulp#6d71a65",
     "gulp-clean-css": "^3.9.0",
