--- a/sandbox.stand/build.gradle
+++ b/sandbox.stand/build.gradle
@@ -17,6 +17,8 @@ dependencies {
   compile "org.eclipse.jetty:jetty-annotations:$jettyVersion"
   compile "org.eclipse.jetty:apache-jsp:$jettyVersion"
 
+  compile "org.json:json:20171018"
+
   compile "com.google.guava:guava:$guavaVersion"
 
   compile "cglib:cglib:3.2.2"
