--- a/sandbox.db/build.gradle
+++ b/sandbox.db/build.gradle
@@ -9,6 +9,8 @@ dependencies {
   compile group: 'org.mybatis', name: 'mybatis', version: '3.4.2'
   compile group: 'org.liquibase', name: 'liquibase-core', version: '3.5.1'
   compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
+  compile group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
+
 
   testCompile "kz.greetgo.depinject:greetgo.depinject.testng:$depinjectVersion"
   testCompile project(':sandbox.stand:db').sourceSets.main.output
