--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ subprojects {
     ext.greetgoMvcVersion = "2.0.7"
     ext.jettyVersion = '9.4.0.v20161208'
     ext.guavaVersion = '23.0'
+    ext.greetgoMsOfficeVersion = "0.4.22"
 
     testCompile 'org.testng:testng:6.5.1'
     compile 'org.easytesting:fest-assert-core:2.0M10'
