--- a/sandbox.client/package.json
+++ b/sandbox.client/package.json
@@ -22,6 +22,7 @@
     "@types/jquery": "^3.2.12",
     "@types/jquery.contextmenu": "^1.7.33",
     "@types/node": "^8.0.28",
+    "angular-file-saver": "^1.1.3",
     "angular2-template-loader": "^0.6.2",
     "assets-webpack-plugin": "^3.5.1",
     "babel-core": "^6.26.0",
