--- a/sandbox.db/build.gradle
+++ b/sandbox.db/build.gradle
@@ -10,6 +10,7 @@ dependencies {
   compile group: 'org.mybatis', name: 'mybatis', version: '3.4.2'
   compile group: 'org.liquibase', name: 'liquibase-core', version: '3.5.1'
   compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
+  compile group: 'org.apache.commons', name: 'commons-compress', version: '1.3'
   compile group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
 
 
