--- a/sandbox.server/build.gradle
+++ b/sandbox.server/build.gradle
@@ -2,4 +2,5 @@ dependencies {
   compile project(':sandbox.db')
 
   compile "kz.greetgo.mvc:greetgo.mvc.war:$greetgoMvcVersion"
+  compile "kz.greetgo.scheduling:greetgo.scheduling:${greetgoSchedulingVersion}"
 }
