--- a/sandbox.db/build.gradle
+++ b/sandbox.db/build.gradle
@@ -12,7 +12,7 @@ dependencies {
   compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
   compile group: 'org.apache.commons', name: 'commons-compress', version: '1.3'
   compile group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
-  compile group: 'com.jcraft', name: 'jsch', version: '0.1.44-1'
+  compile group: 'com.jcraft', name: 'jsch', version: '0.1.52'
 
 
 
